--- a/webapp/www/css/style.css
+++ b/webapp/www/css/style.css
@@ -1,3 +1,21 @@
 .poster {
+    width: 3em !important;
+}
+
+.custom-badge {
+    height: 3em;
     width: 3em;
+    padding-top: 1.1em;
+    padding-left: .8em;
+    border-radius: 10em;
+    font-size: 1.3em;
+    font-weight: 200;
+}
+
+.margin-top {
+    margin-top: 1em;
+}
+
+.margin-left {
+    margin-left: 1em;
 }
