--- a/webapp/www/css/style.css
+++ b/webapp/www/css/style.css
@@ -3,12 +3,13 @@
 }
 
 .custom-badge {
-    height: 3em;
-    width: 3em;
-    padding-top: 1.1em;
-    padding-left: .8em;
+    height: 2.5em;
+    width: 2.5em;
+    padding-top: .9em;
+    padding-left: .6em;
     border-radius: 10em;
-    font-size: 1.3em;
+    margin-top: .4em;
+    font-size: 1.1em;
     font-weight: 200;
 }
 
