--- a/webapp/www/templates/add-modal.html
+++ b/webapp/www/templates/add-modal.html
@@ -1,5 +1,8 @@
 <ion-modal-view>
     <ion-header-bar class="bar-positive">
+        <button class="button button-clear" ng-click="closeModal()">
+            <i class="icon ion-ios-close-empty"></i>
+        </button>
       <h1 class="title">Legg til film</h1>
     </ion-header-bar>
     <ion-content>
